packages/ptyx/native/include/ptyx/ptyx.h


#define PTYX_ABI_VERSION_MAJOR UINT32_C(0)
#define PTYX_ABI_VERSION_MINOR UINT32_C(1)
#define PTYX_ABI_VERSION                                                       \
  ((PTYX_ABI_VERSION_MAJOR << UINT32_C(16)) | PTYX_ABI_VERSION_MINOR)
typedef uint64_t ptyx_runtime_t;
typedef uint64_t ptyx_session_t;
#define PTYX_INVALID_RUNTIME UINT64_C(0)
#define PTYX_INVALID_SESSION UINT64_C(0)
#define PTYX_INVALID_EVENT_TOKEN UINT64_C(0)
typedef enum ptyx_status {
  PTYX_STATUS_OK = 0,
  PTYX_STATUS_INVALID_ARGUMENT = 1,
  PTYX_STATUS_STALE_HANDLE = 2,
  PTYX_STATUS_WRONG_STATE = 3,
  PTYX_STATUS_BACKPRESSURE = 4,
  PTYX_STATUS_UNSUPPORTED = 5,
  PTYX_STATUS_CLOSED = 6,
  PTYX_STATUS_END_OF_STREAM = 7,
  PTYX_STATUS_BUSY = 8,
  PTYX_STATUS_OS_ERROR = 9,
  PTYX_STATUS_INTERNAL = 10,
  PTYX_STATUS_BUFFER_TOO_SMALL = 11,
  PTYX_STATUS_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_status_t;
#define PTYX_CAPABILITY_SIGNALS UINT32_C(1)
#define PTYX_CAPABILITY_PROCESS_GROUPS UINT32_C(2)
#define PTYX_CAPABILITY_TERMINAL_MODES UINT32_C(4)
#define PTYX_CAPABILITY_CONPTY UINT32_C(8)
#define PTYX_CAPABILITY_TERMINAL_NAME UINT32_C(16)
typedef enum ptyx_error_domain {
  PTYX_ERROR_DOMAIN_NONE = 0,
  PTYX_ERROR_DOMAIN_ARGUMENT = 1,
  PTYX_ERROR_DOMAIN_STATE = 2,
  PTYX_ERROR_DOMAIN_INPUT = 3,
  PTYX_ERROR_DOMAIN_OUTPUT = 4,
  PTYX_ERROR_DOMAIN_PROCESS = 5,
  PTYX_ERROR_DOMAIN_RUNTIME = 6,
  PTYX_ERROR_DOMAIN_OS = 7,
  PTYX_ERROR_DOMAIN_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_error_domain_t;
typedef enum ptyx_error_kind {
  PTYX_ERROR_NONE = 0,
  PTYX_ERROR_INVALID_ARGUMENT = 1,
  PTYX_ERROR_STALE_HANDLE = 2,
  PTYX_ERROR_WRONG_STATE = 3,
  PTYX_ERROR_QUEUE_FULL = 4,
  PTYX_ERROR_UNSUPPORTED = 5,
  PTYX_ERROR_CLOSED = 6,
  PTYX_ERROR_NATIVE_FAILURE = 7,
  PTYX_ERROR_INFRASTRUCTURE_LOST = 8,
  PTYX_ERROR_KIND_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_error_kind_t;
typedef enum ptyx_operation {
  PTYX_OPERATION_NONE = 0,
  PTYX_OPERATION_RUNTIME_CREATE = 1,
  PTYX_OPERATION_RUNTIME_SHUTDOWN = 2,
  PTYX_OPERATION_SPAWN = 3,
  PTYX_OPERATION_WRITE = 4,
  PTYX_OPERATION_OUTPUT = 5,
  PTYX_OPERATION_RESIZE = 6,
  PTYX_OPERATION_TERMINATE = 7,
  PTYX_OPERATION_METADATA = 8,
  PTYX_OPERATION_CLOSE = 9,
  PTYX_OPERATION_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_operation_t;
typedef struct ptyx_error {
  uint32_t struct_size;       
  ptyx_error_domain_t domain; 
  ptyx_error_kind_t kind;     
  ptyx_operation_t operation; 
  int32_t native_code;        
  uint32_t flags;             
  uint64_t context[2];        
  uint64_t reserved[3];       
} ptyx_error_t;
typedef struct ptyx_bytes_view {
  const uint8_t *data; 
  uint64_t length;     
} ptyx_bytes_view_t;
#define PTYX_SPAWN_INHERIT_ENVIRONMENT UINT32_C(1)
#define PTYX_SNAPSHOT_HAS_MODE UINT32_C(1)
#define PTYX_SNAPSHOT_HAS_TTY_NAME UINT32_C(2)
#define PTYX_MODE_CANONICAL UINT32_C(1)
#define PTYX_MODE_ECHO UINT32_C(2)
#define PTYX_MODE_SIGNALS UINT32_C(4)
typedef struct ptyx_size {
  uint32_t rows;         
  uint32_t columns;      
  uint32_t pixel_width;  
  uint32_t pixel_height; 
} ptyx_size_t;
typedef struct ptyx_spawn_options {
  uint32_t struct_size;                 
  uint32_t flags;                       
  ptyx_bytes_view_t executable;         
  const ptyx_bytes_view_t *arguments;   
  uint64_t argument_count;              
  const ptyx_bytes_view_t *environment; 
  uint64_t environment_count;           
  ptyx_bytes_view_t working_directory;  
  ptyx_size_t size;                     
  uint64_t input_capacity;              
  uint64_t output_capacity;             
  uint64_t graceful_close_timeout_us;   
  uint64_t reserved[4];                 
} ptyx_spawn_options_t;
typedef struct ptyx_session_snapshot {
  uint32_t struct_size; 
  uint32_t flags;       
  int64_t pid;          
  ptyx_size_t size;     
  uint32_t modes;       
  uint32_t reserved0;   
  uint8_t *tty_name;    
  uint64_t tty_name_capacity; 
  uint64_t tty_name_required; 
  uint64_t reserved[4];       
} ptyx_session_snapshot_t;
PTYX_EXPORT ptyx_status_t PTYX_CALL ptyx_session_spawn_start(
    ptyx_runtime_t runtime, const ptyx_spawn_options_t *options,
    ptyx_session_t *session, ptyx_error_t *error);
PTYX_EXPORT ptyx_status_t PTYX_CALL ptyx_session_write(ptyx_session_t session,
                                                       const uint8_t *bytes,
                                                       uint64_t length,
                                                       ptyx_error_t *error);
PTYX_EXPORT ptyx_status_t PTYX_CALL
ptyx_session_cancel_output(ptyx_session_t session, ptyx_error_t *error);
PTYX_EXPORT ptyx_status_t PTYX_CALL ptyx_session_resize(ptyx_session_t session,
                                                        const ptyx_size_t *size,
                                                        ptyx_error_t *error);
PTYX_EXPORT ptyx_status_t PTYX_CALL
ptyx_session_terminate(ptyx_session_t session, int32_t signal,
                       uint32_t *delivered, ptyx_error_t *error);
PTYX_EXPORT ptyx_status_t PTYX_CALL
ptyx_session_snapshot(ptyx_session_t session, ptyx_session_snapshot_t *snapshot,
                      ptyx_error_t *error);
PTYX_EXPORT ptyx_status_t PTYX_CALL ptyx_session_observe_mode(
    ptyx_session_t session, uint32_t enabled, ptyx_error_t *error);
PTYX_EXPORT ptyx_status_t PTYX_CALL ptyx_session_close(ptyx_session_t session,
                                                       ptyx_error_t *error);
PTYX_EXPORT ptyx_status_t PTYX_CALL
ptyx_session_release(ptyx_session_t *session, ptyx_error_t *error);
typedef enum ptyx_event_kind {
  PTYX_EVENT_SPAWN_READY = 1,
  PTYX_EVENT_SPAWN_FAILED = 2,
  PTYX_EVENT_OUTPUT = 3,
  PTYX_EVENT_INPUT_FAILED = 4,
  PTYX_EVENT_OUTPUT_FAILED = 5,
  PTYX_EVENT_INFRASTRUCTURE_FAILED = 6,
  PTYX_EVENT_OUTPUT_DONE = 7,
  PTYX_EVENT_EXIT = 8,
  PTYX_EVENT_CLOSE_COMPLETE = 9,
  PTYX_EVENT_MODE_CHANGED = 10,
  PTYX_EVENT_KIND_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_event_kind_t;
#define PTYX_EVENT_CLOSE_INPUT_FAILED UINT32_C(1)
#define PTYX_EVENT_CLOSE_OUTPUT_FAILED UINT32_C(2)
#define PTYX_EVENT_CLOSE_CLEANUP_FAILED UINT32_C(4)