packages/ptyx/native/dart/include/ptyx_dart.h


typedef uint64_t PtydAdapter;
typedef PtydAdapter ptyd_adapter_t;
#define PTYD_INVALID_ADAPTER UINT64_C(0)