packages/ptyx/lib/src/ffi/ptyx.g.dart


/// @brief Commits drain-and-discard for buffered and future output.
///
/// @param[in] session Live session handle.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or a typed failure status.
///
/// This operation does not release output events already transferred to the
/// caller. Repeating a successful cancellation for the same live session
/// succeeds without changing state.
@ffi.Native<
  ffi.UnsignedInt Function(ptyx_session_t, ffi.Pointer<ptyx_error_t>)
>()
external int ptyx_session_cancel_output(
  int session,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Starts or joins session close.
///
/// @param[in] session Live session handle.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK when close was accepted, or a typed failure.
///
/// Exactly one PTYX_EVENT_CLOSE_COMPLETE event reports whether every accepted
/// input byte and native owner reached a known terminal state.
@ffi.Native<
  ffi.UnsignedInt Function(ptyx_session_t, ffi.Pointer<ptyx_error_t>)
>()
external int ptyx_session_close(int session, ffi.Pointer<ptyx_error_t> error);

/// @brief Enables or disables terminal mode-change observation.
///
/// @param[in] session Live session handle.
/// @param[in] enabled One to observe changes or zero to stop observation.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK, PTYX_STATUS_UNSUPPORTED, or a typed failure.
///
/// Observation is inactive by default. Enabling it produces distinct
/// PTYX_EVENT_MODE_CHANGED events. Disabling it stops native polling and does
/// not remove an event already transferred to the caller.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyx_session_t,
    ffi.Uint32,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_session_observe_mode(
  int session,
  int enabled,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Releases or abandons a session handle.
///
/// @param[in,out] session Live handle to release. Receives
/// PTYX_INVALID_SESSION on success.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or a typed failure. Passing an already-zero handle
/// succeeds.
///
/// Release is nonblocking. If deterministic close has not converged, native
/// ownership continues cleanup independently.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ptyx_session_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_session_release(
  ffi.Pointer<ptyx_session_t> session,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Resizes a live PTY.
///
/// @param[in] session Live session handle.
/// @param[in] size Non-NULL validated size.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK or a typed failure status.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyx_session_t,
    ffi.Pointer<ptyx_size_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_session_resize(
  int session,
  ffi.Pointer<ptyx_size_t> size,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Captures process, size, mode, and terminal-name metadata atomically.
///
/// @param[in] session Live session handle.
/// @param[in,out] snapshot Initialized snapshot and optional terminal-name
/// storage. Fixed fields and tty_name_required are populated even when the
/// terminal-name buffer is too small.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK, PTYX_STATUS_BUFFER_TOO_SMALL, or a typed failure.
///
/// PTYX_SNAPSHOT_HAS_MODE makes PTYX_MODE_* bits valid.
/// PTYX_SNAPSHOT_HAS_TTY_NAME makes the terminal-name fields valid. A second
/// call after a size query is a new atomic snapshot.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyx_session_t,
    ffi.Pointer<ptyx_session_snapshot_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_session_snapshot(
  int session,
  ffi.Pointer<ptyx_session_snapshot_t> snapshot,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Starts asynchronous PTY session creation.
///
/// @param[in] runtime Live runtime handle.
/// @param[in] options Complete spawn options.
/// @param[out] session Receives a nonzero generation handle on success.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK after native ownership of the request is established,
/// or a typed failure status.
///
/// Every caller-owned byte is validated and copied before return. Exactly one
/// PTYX_EVENT_SPAWN_READY or PTYX_EVENT_SPAWN_FAILED event follows successful
/// request admission. Releasing the returned handle before readiness cancels
/// or abandons the transaction without leaking a child.
///
/// @par Blocking
/// Does not wait for process creation, broker I/O, or queue capacity.
/// @par Thread safety
/// Safe to call concurrently.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyx_runtime_t,
    ffi.Pointer<ptyx_spawn_options_t>,
    ffi.Pointer<ptyx_session_t>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_session_spawn_start(
  int runtime,
  ffi.Pointer<ptyx_spawn_options_t> options,
  ffi.Pointer<ptyx_session_t> session,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Requests termination of the owned terminal job.
///
/// @param[in] session Live session handle.
/// @param[in] signal Unix signal number. Windows ignores this value and
/// terminates the owned Job Object.
/// @param[out] delivered Receives one when termination was accepted and zero
/// when the direct child had already exited.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK, PTYX_STATUS_UNSUPPORTED, or a typed failure.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyx_session_t,
    ffi.Int32,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ptyx_error_t>,
  )
>()
external int ptyx_session_terminate(
  int session,
  int signal,
  ffi.Pointer<ffi.Uint32> delivered,
  ffi.Pointer<ptyx_error_t> error,
);

/// @brief Accepts a complete input buffer or none of it.
///
/// @param[in] session Live session handle.
/// @param[in] bytes Input bytes. May be NULL only when length is zero.
/// @param[in] length Number of input bytes.
/// @param[out] error Optional initialized error destination.
/// @return PTYX_STATUS_OK after bounded native admission,
/// PTYX_STATUS_BACKPRESSURE when bounded admission is temporarily unavailable
/// because of capacity, entry, channel, or concurrent-admission contention, or
/// a terminal failure status.
///
/// Returning success permits immediate reuse or release of caller storage.
/// Success does not mean the child consumed the bytes.
///
/// @par Thread safety
/// Safe to call concurrently. Accepted writes are FIFO by successful
/// admission linearization order.
@ffi.Native<
  ffi.UnsignedInt Function(
    ptyx_session_t,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint64,
    ffi.Pointer<ptyx_error_t>,
  )
>(isLeaf: true)
external int ptyx_session_write(
  int session,
  ffi.Pointer<ffi.Uint8> bytes,
  int length,
  ffi.Pointer<ptyx_error_t> error,
);

const int PTYD_INVALID_ADAPTER = 0;

const int PTYX_ABI_VERSION = 1;

const int PTYX_ABI_VERSION_MAJOR = 0;

const int PTYX_ABI_VERSION_MINOR = 1;

const int PTYX_CAPABILITY_CONPTY = 8;

const int PTYX_CAPABILITY_PROCESS_GROUPS = 2;

const int PTYX_CAPABILITY_SIGNALS = 1;

const int PTYX_CAPABILITY_TERMINAL_MODES = 4;

const int PTYX_CAPABILITY_TERMINAL_NAME = 16;

const int PTYX_EVENT_CLOSE_CLEANUP_FAILED = 4;

const int PTYX_EVENT_CLOSE_INPUT_FAILED = 1;

const int PTYX_EVENT_CLOSE_OUTPUT_FAILED = 2;

const int PTYX_INVALID_EVENT_TOKEN = 0;

const int PTYX_INVALID_RUNTIME = 0;

const int PTYX_INVALID_SESSION = 0;

const int PTYX_MODE_CANONICAL = 1;

const int PTYX_MODE_ECHO = 2;

const int PTYX_MODE_SIGNALS = 4;

const int PTYX_SNAPSHOT_HAS_MODE = 1;

const int PTYX_SNAPSHOT_HAS_TTY_NAME = 2;

const int PTYX_SPAWN_INHERIT_ENVIRONMENT = 1;

/// Generation-checked identity of one Dart event-pump adapter.
typedef ptyd_adapter_t = ffi.Uint64;
typedef Dartptyd_adapter_t = int;

/// @brief Immutable borrowed byte sequence.
final class ptyx_bytes_view extends ffi.Struct {
  /// < Borrowed bytes, or NULL when length is zero.
  external ffi.Pointer<ffi.Uint8> data;

  /// < Number of readable bytes at data.
  @ffi.Uint64()
  external int length;
}

typedef ptyx_bytes_view_t = ptyx_bytes_view;

/// @brief Stable value describing one failure.
///
/// This structure owns no pointers. Unknown trailing fields are reserved for
/// compatible ABI growth. Initialize the complete structure to zero and set
/// struct_size before passing it to ptyx.
final class ptyx_error extends ffi.Struct {
  /// < Caller-visible structure size.
  @ffi.Uint32()
  external int struct_size;

  /// < PTYX_ERROR_DOMAIN_* value.
  @ffi.UnsignedInt()
  external int domain;

  /// < PTYX_ERROR_* value.
  @ffi.UnsignedInt()
  external int kind;

  /// < PTYX_OPERATION_* value.
  @ffi.UnsignedInt()
  external int operation;

  /// < Optional errno or Win32 status, or zero.
  @ffi.Int32()
  external int native_code;

  /// < Reserved error-detail bits.
  @ffi.Uint32()
  external int flags;

  /// < Bounded non-secret numeric context.
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Uint64> context;

  /// < Must be zero.
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Uint64> reserved;
}

/// Stable subsystem that reported an error.
sealed class ptyx_error_domain {
  /// No error domain.
  static const PTYX_ERROR_DOMAIN_NONE = 0;

  /// Caller input validation failure.
  static const PTYX_ERROR_DOMAIN_ARGUMENT = 1;

  /// Lifecycle or handle-state failure.
  static const PTYX_ERROR_DOMAIN_STATE = 2;

  /// Terminal input direction failure.
  static const PTYX_ERROR_DOMAIN_INPUT = 3;

  /// Terminal output direction failure.
  static const PTYX_ERROR_DOMAIN_OUTPUT = 4;

  /// Child process operation failure.
  static const PTYX_ERROR_DOMAIN_PROCESS = 5;

  /// Shared runtime infrastructure failure.
  static const PTYX_ERROR_DOMAIN_RUNTIME = 6;

  /// Operating-system boundary failure.
  static const PTYX_ERROR_DOMAIN_OS = 7;

  /// Reserved value that fixes the public enum representation at 32 bits.
  static const PTYX_ERROR_DOMAIN_ENUM_FORCE_32_BIT = 2147483647;
}

/// Stable category of an error.
sealed class ptyx_error_kind {
  /// No error kind.
  static const PTYX_ERROR_NONE = 0;

  /// Invalid caller value or layout.
  static const PTYX_ERROR_INVALID_ARGUMENT = 1;

  /// Retired or unknown generation-checked identity.
  static const PTYX_ERROR_STALE_HANDLE = 2;

  /// Operation rejected by the current lifecycle state.
  static const PTYX_ERROR_WRONG_STATE = 3;

  /// Bounded queue cannot accept the complete operation.
  static const PTYX_ERROR_QUEUE_FULL = 4;

  /// Capability is unavailable on this backend.
  static const PTYX_ERROR_UNSUPPORTED = 5;

  /// Session or direction is terminal.
  static const PTYX_ERROR_CLOSED = 6;

  /// Native or operating-system operation failed.
  static const PTYX_ERROR_NATIVE_FAILURE = 7;

  /// Runtime ownership or event infrastructure was lost.
  static const PTYX_ERROR_INFRASTRUCTURE_LOST = 8;

  /// Reserved value that fixes the public enum representation at 32 bits.
  static const PTYX_ERROR_KIND_ENUM_FORCE_32_BIT = 2147483647;
}

typedef ptyx_error_t = ptyx_error;
